Added new project in Portfolio page
This it the one I am particularly prouf of!

--- a/examples/jumbotron/portfolio.html
+++ b/examples/jumbotron/portfolio.html
@@ -37,7 +37,8 @@
 <ul>
 	<li>Pet Store</li>
 	<li>Something Very Awesome</li>
-	<li>Unusable Git Client</li>	
+	<li>Unusable Git Client</li>
+	<li>VIM tutorial</li>
 </ul>
   </body>
 </html>
