Changed links to polish language

--- a/examples/jumbotron/index.html
+++ b/examples/jumbotron/index.html
@@ -63,7 +63,7 @@
       <div class="container">
         <h1>Welcome to my website!</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Dowiedz sie wiecej &raquo;</a></p>
       </div>
     </div>
 
@@ -73,17 +73,17 @@
         <div class="col-md-4">
           <h2>Portfolio</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="portfolio.html" role="button">View portfolio &raquo;</a></p>
+          <p><a class="btn btn-default" href="portfolio.html" role="button">Zobacz portfolio &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>Heading</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Zobacz szczegoly &raquo;</a></p>
        </div>
         <div class="col-md-4">
           <h2>BLOG</h2>
           <p>Come and see my aDEVntures.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <p><a class="btn btn-default" href="#" role="button">Zobacz szczegoly &raquo;</a></p>
         </div>
       </div>
 
