feature implementation started

--- a/examples/jumbotron/index.html
+++ b/examples/jumbotron/index.html
@@ -57,7 +57,7 @@
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
-
+asdasd
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
@@ -88,7 +88,7 @@
       </div>
 
       <hr>
-
+asdasdss
       <footer>
         <p>&copy; Company, Inc.</p>
       </footer>
